Small fixes/mo